--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>PhonebookCrudNg9</title>
-  <base href="/">
+  <base href="/"> <!-- will explain during build and deployment -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- Step 1: What's app-root? -->
   <app-root></app-root>
+
+
 </body>
 </html>
